@@ -34,12 +34,24 @@ public class FilmRepository extends BaseRepository<Film> {
     private static final String GET_LIKES_QUERY = "SELECT user_id FROM Likes WHERE film_id = ?";
     private static final String ADD_LIKE_QUERY = "INSERT INTO Likes (user_id, film_id) VALUES (?, ?)";
     private static final String REMOVE_LIKE_QUERY = "DELETE FROM Likes WHERE film_id = ? AND user_id = ?";
+    private static final String GET_COMMON_FILMS = "SELECT f.*, r.rating_id as mpa_id, r.rating_name as mpa_name " +
+            "FROM Films f " +
+            "JOIN rating AS r ON f.rating_id = r.rating_id " +
+            "JOIN Likes l ON f.id = l.film_id " +
+            "WHERE l.film_id IN ( " +
+            "    SELECT film_id FROM Likes WHERE user_id = ? " +
+            "    INTERSECT " +
+            "    SELECT film_id FROM Likes WHERE user_id = ? " +
+            ") " +
+            "GROUP BY f.id " +
+            "ORDER BY COUNT(l.user_id) DESC";
 
     private static final String FIND_GENRES_FOR_FILMS_QUERY =
             "SELECT fg.film_id, g.id as genre_id, g.name as genre_name " +
                     "FROM genre g " +
                     "JOIN film_genre fg ON g.id = fg.genre_id " +
                     "WHERE fg.film_id IN (:filmIds)";
+    private static final String DELETE_FILM_QUERY = "DELETE FROM Films WHERE id = ?";
 
     private final JdbcTemplate jdbc;
     private final NamedParameterJdbcTemplate namedJdbcTemplate;
@@ -91,13 +103,21 @@ public class FilmRepository extends BaseRepository<Film> {
         return films;
     }
 
+    public List<Film> findCommon(long userId, long filmId) {
+        List<Film> films = jdbc.query(GET_COMMON_FILMS, filmWithRatingMapper, userId, filmId);
+        if (!films.isEmpty()) {
+            setGenresForFilms(films);
+        }
+        return films;
+    }
+
     public Optional<Film> findById(long id) {
         List<Film> films = jdbc.query(FIND_BY_ID_QUERY, filmWithRatingMapper, id);
 
         if (films.isEmpty()) {
             return Optional.empty();
         } else {
-            Film film = films.get(0);
+            Film film = films.getFirst();
             setGenresForFilms(List.of(film));
             return Optional.of(film);
         }
@@ -194,6 +214,10 @@ public class FilmRepository extends BaseRepository<Film> {
             }
         });
     }
+  
+    public boolean deleteFilm(long id) {
+        return delete(DELETE_FILM_QUERY, id);
+    }
 
     private void deleteGenres(long filmId) {
         String sql = "DELETE FROM film_genre WHERE film_id = ?";
@@ -230,4 +254,32 @@ public class FilmRepository extends BaseRepository<Film> {
     public void removeLike(long filmId, long userId) {
         jdbc.update(REMOVE_LIKE_QUERY, filmId, userId);
     }
+
+    public List<Film> getTopFilms(int count, Integer genreId, Integer year) {
+
+        StringBuilder queryBuilder = new StringBuilder("SELECT f.*, r.rating_id AS mpa_id, r.rating_name AS mpa_name " +
+                "FROM films AS f JOIN rating AS r on f.rating_id = r.rating_id " +
+                "JOIN film_genre AS fg ON f.id = fg.film_id " +
+                "JOIN likes AS l ON f.id = l.film_id WHERE 1=1");
+
+        List<Integer> filterParams = new ArrayList<>();
+
+        if (genreId != -1) {
+            queryBuilder.append(" AND fg.genre_id = ?");
+            filterParams.add(genreId);
+        }
+
+        if (year != -1) {
+            queryBuilder.append(" AND EXTRACT(YEAR FROM f.release_date) = ?");
+            filterParams.add(year);
+        }
+
+        queryBuilder.append(" GROUP BY f.id, r.rating_id, r.rating_name ORDER BY COUNT(l.user_id) DESC LIMIT ?;");
+        filterParams.add(count);
+
+        List<Film> films = jdbc.query(queryBuilder.toString(), filmWithRatingMapper, filterParams.toArray());
+        setGenresForFilms(films);
+        return films;
+    }
+
 }
